--- a/build.xml
+++ b/build.xml
@@ -430,7 +430,7 @@
             depends="server"
             description="Packages the war file into tar file with a release related name.">
 
-        <copy file="${distributionResources.dir}/WarFileReadme"
+        <copy file="${distributionResources.dir}/WarFileReadMe"
               tofile="${build.dist}/README"/>
 
         <jar destfile="${build.dist}/olfs-${VERSION}-webapp.jar">
