Added an argument to the tcc target (but commented it out so tcc doesn't recur unexpedly)

--- a/build.xml
+++ b/build.xml
@@ -435,8 +435,8 @@
         
         <java classname="opendap.semantics.IRISail.ThreddsCatalogUtil"
             fork="true"
-            dir="${build.run}"
-            >
+            dir="${build.run}">
+        	<!--arg line="-r"/-->
             <classpath refid="threddsCatalogCrawler.compile.classpath"/>        
         </java>
         
