--- a/build.xml
+++ b/build.xml
@@ -161,7 +161,7 @@
     <property name="WebInfResources.dir" location="${resources.dir}/WEB-INF"/>
     <property name="distributionResources.dir"  location="${resources.dir}/distribution"/>
 
-    <property name="THREDDSResources.dir" location="${resources.dir}/THREDDS"/>
+    <property name="WebStartResources.dir" location="${resources.dir}/WebStart"/>
     <property name="WCS.dir" location="${resources.dir}/WCS"/>
 
 
@@ -680,6 +680,9 @@
                 <exclude name="src.distribution.readme"/>
                 <exclude name="_notes"/>
             </zipfileset>
+
+
+            <zipfileset dir="${WebStartResources.dir}" prefix="WebStart" />
 
 
             <!--
