--- a/resources/WCS/WEB-INF/web.xml
+++ b/resources/WCS/WEB-INF/web.xml
@@ -14,14 +14,30 @@
     <display-name>Web Coverage Service</display-name>
     <description>OPeNDAP WCS Service</description>
 
+    <!--
+
+    <servlet>
+        <servlet-name>wcs</servlet-name>
+        <servlet-class>opendap.wcs.v1_1_2.WcsServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+   -->
+   
     <servlet>
         <servlet-name>wcs</servlet-name>
 
-        <servlet-class>opendap.wcs.v1_1_2.WcsServlet</servlet-class>
+        <servlet-class>opendap.wcs.v1_1_2.http.Servlet</servlet-class>
+        
+        <init-param>
+            <param-name>SemanticPreload</param-name>
+            <param-value>http://iri.columbia.edu/~benno/opendaptest/daptestpreload.owl</param-value>
+        </init-param>
 
-        <load-on-startup>1</load-on-startup>
+        <load-on-startup>1</load-on-startup>     x
 
     </servlet>
+
 
     <servlet>
         <servlet-name>docs</servlet-name>
