Changes to the crawler code so that we can do stuff like build NCML from the raw results of a crawl, better builds for the executables, fixes for some common issues in URLs, stuff like that.

--- a/resources/metacat/profile.properties
+++ b/resources/metacat/profile.properties
@@ -52,7 +52,7 @@ file=profile.txt
 # (comma separated)
 # Note: com.mentorgen.tools.profile is always excluded
 #
-exclude=org.jdom,org.slf4j,ch.qos.logback,org.postgresql
+exclude=org.jdom,org.slf4j,ch.qos.logback,org.postgresql,net.sf.saxon
 #
 # Track Object Allocation (very expensive)
 # values: on, off
