--- a/build.xml
+++ b/build.xml
@@ -194,6 +194,7 @@
     <property name="commons-httpclient.lib" value="apache-commons-httpclient-3.1.jar"/>
     <property name="commons-logging.lib"    value="apache-commons-logging-1.1.1.jar"/>
     <property name="commons-codec.lib"      value="apache-commons-codec-1.3.jar"/>
+    <property name="commons-lang.lib"      value="apache-commons-lang-2.5.jar"/>
 
     <property name="serializer.lib"    value="xalan-2.7.1-serializer.jar"/>
     <property name="xalan.lib"         value="xalan-2.7.1-xalan.jar"/>
@@ -226,6 +227,7 @@
             <include name="${commons-httpclient.lib}"/>
             <include name="${commons-logging.lib}"/>
             <include name="${commons-codec.lib}"/>
+            <include name="${commons-lang.lib}"/>
             <include name="${saxon-jdom.lib}"/>
             <include name="${saxon-s9api.lib}"/>
             <include name="${saxon.lib}"/>
