--- a/build.xml
+++ b/build.xml
@@ -190,7 +190,7 @@
     <property name="trree.lib"            value="trree-3.0.beta9.jar"/>
     <property name="openrdf-sesame.lib"   value="openrdf-sesame-2.3.0-onejar.jar" />
 
-    <property name="commons-cli.lib"        value="commons-cli-1.2.jar"/>
+    <property name="commons-cli.lib"        value="apache-commons-cli-1.2.jar"/>
     <property name="commons-httpclient.lib" value="apache-commons-httpclient-3.1.jar"/>
     <property name="commons-logging.lib"    value="apache-commons-logging-1.1.1.jar"/>
     <property name="commons-codec.lib"      value="apache-commons-codec-1.3.jar"/>
@@ -590,7 +590,7 @@
         <jar destfile="${build.dist}/hexencoder.jar"
              manifest="resources/META-INF/hexencoder.MANIFEST.MF">
             <fileset dir="${build.classes}">
-                <include name="opendap/wcs_service/UrlEncoder.class"/>
+                <include name="opendap/gateway/EncodeDecode.class"/>
             </fileset>
         </jar>
 
